# plasmaboundaries

./: .gitignore  README.md  example.py  plasma_magnetic_flux.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: anaconda-publish.yml  ci_with_install.yml
conda/: meta.yaml
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst  magnetic_flux.rst  model.rst  modules.rst  plasmaboundaries.rst
examples/: plot_ITER_plasmas.py  plot_NSTX.py
plasma-boundaries/: magnetic_flux.py  model.py  plot.py
plasma_boundaries/: __init__.py  helpers.py  magnetic_flux.py  model.py  parameters.py
plasmaboundaries/: __init__.py  magnetic_flux.py  model.py  parameters.py
tests/: test.py  test_model.py  test_version.py
