[metadata]
name = plasmaboundaries
author = Remi Delaporte-Mathurin
author_email = rdelaportemathurin@gmail.com
description = Determine plasma flux functions for various plasma parameters and plasma configurations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fusion-energy/plasmaboundaries
license = MIT
license_file = LICENSE.txt
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/fusion-energy/plasmaboundaries
    Tracker = https://github.com/fusion-energy/plasmaboundaries/issues

[options]
packages = find:
python_requires= >=3.7
install_requires=
    scipy >= 1.7.0
    sympy >= 1.8
    numpy >= 1.21.1
    matplotlib >= 3.4.2

[options.extras_require]
tests = 
    pytest >= 5.4.3
docs = 
    sphinx >= 4.1.2

[flake8]
per-file-ignores = __init__.py:F401